--- a/index.html
+++ b/index.html
@@ -1,12 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>worldCup</title>
-</head>
-<body>
-    
-</body>
+    <!-- link google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <!-- fontawesome  -->
+    <script
+      src="https://kit.fontawesome.com/635276bb2e.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- link css file  -->
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="headar">
+        <div class="header-info">
+          <h1 class="header-title">The Greatest show on the earth</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+            corrupti quibusdam quasi perspiciatis impedit architecto est animi
+            quo, saepe, nobis cumque aspernatur nesciunt mollitia voluptatem?
+            Minus, corrupti? Quam, dolorum mollitia!
+          </p>
+          <button type="button" class="header-btn">
+            Watch Live <i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+        <div class="header-img">
+          <img src="./images/Banner Image.png" alt="" />
+        </div>
+      </section>
+      <section class="cards-section">
+        <aside class="left-aside">
+          <button class="aside-btn"><a href="">Upcoming Match</a></button>
+
+          <button class="aside-btn"><a href=""> All Group</a></button>
+
+          <button class="aside-btn red"><a href="">Blog</a></button>
+        </aside>
+        <aside class="right-aside">
+          <div class="card">
+            <img src="./images/Blog Image.png" alt="" /> <br />
+            <button class="card-btn">Transfer</button>
+            <p class="card-title">
+              Transfer Live: Chlesea in <br />
+              talks over Kimpenbe transfer
+            </p>
+            <div class="card-logo">
+              <img src="./images/Time Icon.png" alt="" />
+              <p class="card-text">10hr</p>
+              <img src="./images/Chat Icon.png" alt="" />
+              <p class="card-text">23</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Blog Image.png" alt="" /> <br />
+            <button class="card-btn">Transfer</button>
+            <p class="card-title">
+              Transfer Live: Chlesea in <br />
+              talks over Kimpenbe transfer
+            </p>
+            <div class="card-logo">
+              <img src="./images/Time Icon.png" alt="" />
+              <p class="card-text">10hr</p>
+              <img src="./images/Chat Icon.png" alt="" />
+              <p class="card-text">23</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Blog Image.png" alt="" /> <br />
+            <button class="card-btn">Transfer</button>
+            <p class="card-title">
+              Transfer Live: Chlesea in <br />
+              talks over Kimpenbe transfer
+            </p>
+            <div class="card-logo">
+              <img src="./images/Time Icon.png" alt="" />
+              <p class="card-text">10hr</p>
+              <img src="./images/Chat Icon.png" alt="" />
+              <p class="card-text">23</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Blog Image.png" alt="" /> <br />
+            <button class="card-btn">Transfer</button>
+            <p class="card-title">
+              Transfer Live: Chlesea in <br />
+              talks over Kimpenbe transfer
+            </p>
+            <div class="card-logo">
+              <img src="./images/Time Icon.png" alt="" />
+              <p class="card-text">10hr</p>
+              <img src="./images/Chat Icon.png" alt="" />
+              <p class="card-text">23</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Blog Image.png" alt="" /> <br />
+            <button class="card-btn">Transfer</button>
+            <p class="card-title">
+              Transfer Live: Chlesea in <br />
+              talks over Kimpenbe transfer
+            </p>
+            <div class="card-logo">
+              <img src="./images/Time Icon.png" alt="" />
+              <p class="card-text">10hr</p>
+              <img src="./images/Chat Icon.png" alt="" />
+              <p class="card-text">23</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Blog Image.png" alt="" /> <br />
+            <button class="card-btn">Transfer</button>
+            <p class="card-title">
+              Transfer Live: Chlesea in <br />
+              talks over Kimpenbe transfer
+            </p>
+            <div class="card-logo">
+              <img src="./images/Time Icon.png" alt="" />
+              <p class="card-text">10hr</p>
+              <img src="./images/Chat Icon.png" alt="" />
+              <p class="card-text">23</p>
+            </div>
+          </div>
+        </aside>
+      </section>
+      <footer>
+        <h2>Goal</h2>
+            Goal Live
+        <div class="footer-section">
+            <div class="footer-text"> Contact Us</div>
+            <div class="footer-text"> Terms of Service</div>
+            <div class="footer-text"> Privacy Policy</div>
+            <div class="footer-text">Privacy Settings</div>
+            <div class="footer-text">Goal App</div>
+            <div class="footer-text">Goal Live</div>
+        </div>
+        <div>
+            <i class="fa-brands fa-facebook-square icon"></i>
+            <i class="fa-brands fa-twitter icon"></i>
+            <i class="fa-brands fa-instagram-square icon"></i>
+        </div>
+    </footer>
+    </main>
+   
+  </body>
 </html>
