--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
   </head>
   <body>
     <main>
-      <section class="headar">
+      <section class="headar-section">
+        <div class="header">
         <div class="header-info">
           <h1 class="header-title">The Greatest show on the earth</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
-            corrupti quibusdam quasi perspiciatis impedit architecto est animi
-            quo, saepe, nobis cumque aspernatur nesciunt mollitia voluptatem?
-            Minus, corrupti? Quam, dolorum mollitia!
+            Contrary to popular belief, is not simply  random text.
           </p>
           <button type="button" class="header-btn">
             Watch Live <i class="fa-solid fa-angle-right"></i>
@@ -38,6 +36,7 @@
         <div class="header-img">
           <img src="./images/Banner Image.png" alt="" />
         </div>
+      </div>
       </section>
       <section class="cards-section">
         <aside class="left-aside">
@@ -146,9 +145,9 @@
             <div class="footer-text">Goal Live</div>
         </div>
         <div>
-            <i class="fa-brands fa-facebook-square icon"></i>
-            <i class="fa-brands fa-twitter icon"></i>
-            <i class="fa-brands fa-instagram-square icon"></i>
+            <i class="fa-brands fa-facebook-square icon fa-xl"></i>
+            <i class="fa-brands fa-twitter icon fa-xl"></i>
+            <i class="fa-brands fa-instagram-square icon fa-xl"></i>
         </div>
     </footer>
     </main>
