--- a/index.html
+++ b/index.html
@@ -24,133 +24,133 @@
     <main>
       <section class="headar-section">
         <div class="header">
-        <div class="header-info">
-          <h1 class="header-title">The Greatest show on the earth</h1>
-          <p>
-            Contrary to popular belief, is not simply  random text.
-          </p>
-          <button type="button" class="header-btn">
-            Watch Live <i class="fa-solid fa-angle-right"></i>
-          </button>
+          <div class="header-info">
+            <h1 class="header-title">The Greatest show on the earth</h1>
+            <p>Contrary to popular belief, is not simply random text.</p>
+            <button type="button" class="header-btn">
+              Watch Live <i class="fa-solid fa-angle-right"></i>
+            </button>
+          </div>
+          <div class="header-img">
+            <img src="./images/Banner Image.png" alt="" />
+          </div>
         </div>
-        <div class="header-img">
-          <img src="./images/Banner Image.png" alt="" />
-        </div>
-      </div>
       </section>
-      <section class="cards-section">
-        <aside class="left-aside">
-          <button class="aside-btn"><a href="">Upcoming Match</a></button>
+      <div class="for-responsive">
+        <section class="cards-section">
+          <aside class="left-aside">
+            <button class="aside-btn"><a href="">Upcoming Match</a></button>
 
-          <button class="aside-btn"><a href=""> All Group</a></button>
+            <button class="aside-btn"><a href=""> All Group</a></button>
 
-          <button class="aside-btn red"><a href="">Blog</a></button>
-        </aside>
-        <aside class="right-aside">
-          <div class="card">
-            <img src="./images/Blog Image.png" alt="" /> <br />
-            <button class="card-btn">Transfer</button>
-            <p class="card-title">
-              Transfer Live: Chlesea in <br />
-              talks over Kimpenbe transfer
-            </p>
-            <div class="card-logo">
-              <img src="./images/Time Icon.png" alt="" />
-              <p class="card-text">10hr</p>
-              <img src="./images/Chat Icon.png" alt="" />
-              <p class="card-text">23</p>
+            <button class="aside-btn red-btn"><a href="">Blog</a></button>
+          </aside>
+          <aside class="right-aside">
+            <div class="card">
+              <img src="./images/Blog Image.png" alt="" /> <br />
+              <button class="card-btn">Transfer</button>
+              <p class="card-title">
+                Transfer Live: Chlesea in <br />
+                talks over Kimpenbe transfer
+              </p>
+              <div class="card-logo">
+                <img src="./images/Time Icon.png" alt="" />
+                <p class="card-text">10hr</p>
+                <img src="./images/Chat Icon.png" alt="" />
+                <p class="card-text">23</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="./images/Blog Image.png" alt="" /> <br />
-            <button class="card-btn">Transfer</button>
-            <p class="card-title">
-              Transfer Live: Chlesea in <br />
-              talks over Kimpenbe transfer
-            </p>
-            <div class="card-logo">
-              <img src="./images/Time Icon.png" alt="" />
-              <p class="card-text">10hr</p>
-              <img src="./images/Chat Icon.png" alt="" />
-              <p class="card-text">23</p>
+            <div class="card">
+              <img src="./images/Blog Image.png" alt="" /> <br />
+              <button class="card-btn">Transfer</button>
+              <p class="card-title">
+                Transfer Live: Chlesea in <br />
+                talks over Kimpenbe transfer
+              </p>
+              <div class="card-logo">
+                <img src="./images/Time Icon.png" alt="" />
+                <p class="card-text">10hr</p>
+                <img src="./images/Chat Icon.png" alt="" />
+                <p class="card-text">23</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="./images/Blog Image.png" alt="" /> <br />
-            <button class="card-btn">Transfer</button>
-            <p class="card-title">
-              Transfer Live: Chlesea in <br />
-              talks over Kimpenbe transfer
-            </p>
-            <div class="card-logo">
-              <img src="./images/Time Icon.png" alt="" />
-              <p class="card-text">10hr</p>
-              <img src="./images/Chat Icon.png" alt="" />
-              <p class="card-text">23</p>
+            <div class="card">
+              <img src="./images/Blog Image.png" alt="" /> <br />
+              <button class="card-btn">Transfer</button>
+              <p class="card-title">
+                Transfer Live: Chlesea in <br />
+                talks over Kimpenbe transfer
+              </p>
+              <div class="card-logo">
+                <img src="./images/Time Icon.png" alt="" />
+                <p class="card-text">10hr</p>
+                <img src="./images/Chat Icon.png" alt="" />
+                <p class="card-text">23</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="./images/Blog Image.png" alt="" /> <br />
-            <button class="card-btn">Transfer</button>
-            <p class="card-title">
-              Transfer Live: Chlesea in <br />
-              talks over Kimpenbe transfer
-            </p>
-            <div class="card-logo">
-              <img src="./images/Time Icon.png" alt="" />
-              <p class="card-text">10hr</p>
-              <img src="./images/Chat Icon.png" alt="" />
-              <p class="card-text">23</p>
+            <div class="card">
+              <img src="./images/Blog Image.png" alt="" /> <br />
+              <button class="card-btn">Transfer</button>
+              <p class="card-title">
+                Transfer Live: Chlesea in <br />
+                talks over Kimpenbe transfer
+              </p>
+              <div class="card-logo">
+                <img src="./images/Time Icon.png" alt="" />
+                <p class="card-text">10hr</p>
+                <img src="./images/Chat Icon.png" alt="" />
+                <p class="card-text">23</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="./images/Blog Image.png" alt="" /> <br />
-            <button class="card-btn">Transfer</button>
-            <p class="card-title">
-              Transfer Live: Chlesea in <br />
-              talks over Kimpenbe transfer
-            </p>
-            <div class="card-logo">
-              <img src="./images/Time Icon.png" alt="" />
-              <p class="card-text">10hr</p>
-              <img src="./images/Chat Icon.png" alt="" />
-              <p class="card-text">23</p>
+            <div class="card">
+              <img src="./images/Blog Image.png" alt="" /> <br />
+              <button class="card-btn">Transfer</button>
+              <p class="card-title">
+                Transfer Live: Chlesea in <br />
+                talks over Kimpenbe transfer
+              </p>
+              <div class="card-logo">
+                <img src="./images/Time Icon.png" alt="" />
+                <p class="card-text">10hr</p>
+                <img src="./images/Chat Icon.png" alt="" />
+                <p class="card-text">23</p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <img src="./images/Blog Image.png" alt="" /> <br />
-            <button class="card-btn">Transfer</button>
-            <p class="card-title">
-              Transfer Live: Chlesea in <br />
-              talks over Kimpenbe transfer
-            </p>
-            <div class="card-logo">
-              <img src="./images/Time Icon.png" alt="" />
-              <p class="card-text">10hr</p>
-              <img src="./images/Chat Icon.png" alt="" />
-              <p class="card-text">23</p>
+            <div class="card">
+              <img src="./images/Blog Image.png" alt="" /> <br />
+              <button class="card-btn">Transfer</button>
+              <p class="card-title">
+                Transfer Live: Chlesea in <br />
+                talks over Kimpenbe transfer
+              </p>
+              <div class="card-logo">
+                <img src="./images/Time Icon.png" alt="" />
+                <p class="card-text">10hr</p>
+                <img src="./images/Chat Icon.png" alt="" />
+                <p class="card-text">23</p>
+              </div>
             </div>
-          </div>
-        </aside>
-      </section>
-      <footer>
-        <h2>Goal</h2>
-            Goal Live
-        <div class="footer-section">
-            <div class="footer-text"> Contact Us</div>
-            <div class="footer-text"> Terms of Service</div>
-            <div class="footer-text"> Privacy Policy</div>
+          </aside>
+        </section>
+        <button class="tab-view-btn">View All</button>
+        <footer>
+          <h2>Goal</h2>
+          Goal Live
+          <div class="footer-section">
+            <div class="footer-text">Contact Us</div>
+            <div class="footer-text">Terms of Service</div>
+            <div class="footer-text">Privacy Policy</div>
             <div class="footer-text">Privacy Settings</div>
             <div class="footer-text">Goal App</div>
             <div class="footer-text">Goal Live</div>
-        </div>
-        <div>
+          </div>
+          <div>
             <i class="fa-brands fa-facebook-square icon fa-xl"></i>
             <i class="fa-brands fa-twitter icon fa-xl"></i>
             <i class="fa-brands fa-instagram-square icon fa-xl"></i>
-        </div>
-    </footer>
+          </div>
+        </footer>
+      </div>
     </main>
-   
   </body>
 </html>
