--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <div class="header">
           <div class="header-info">
             <h1 class="header-title">The Greatest show on the earth</h1>
-            <p>Contrary to popular belief, is not simply random text.</p>
+            <p
+              class="header-text"
+              title="Contrary to popular belief, is not simply random text."
+            >
+              Contrary to popular belief, is not simply random text.
+            </p>
             <button type="button" class="header-btn">
               Watch Live <i class="fa-solid fa-angle-right"></i>
             </button>
@@ -39,11 +44,15 @@
       <div class="for-responsive">
         <section class="cards-section">
           <aside class="left-aside">
-            <button class="aside-btn"><a href="">Upcoming Match</a></button>
+            <button class="aside-btn">
+              <a href="./upcoming-match.html" target="_blank">Upcoming Match</a>
+            </button>
 
             <button class="aside-btn"><a href=""> All Group</a></button>
 
-            <button class="aside-btn red-btn"><a href="">Blog</a></button>
+            <button class="aside-btn red-btn">
+              <a href="./index.html" target="_blank">Blog</a>
+            </button>
           </aside>
           <aside class="right-aside">
             <div class="card">
@@ -145,9 +154,15 @@
             <div class="footer-text">Goal Live</div>
           </div>
           <div>
-            <i class="fa-brands fa-facebook-square icon fa-xl"></i>
-            <i class="fa-brands fa-twitter icon fa-xl"></i>
-            <i class="fa-brands fa-instagram-square icon fa-xl"></i>
+            <a href="https://www.facebook.com/" target="_blank"
+              ><i class="fa-brands fa-facebook-square icon fa-xl"></i
+            ></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-twitter icon fa-xl"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram-square icon fa-xl"></i
+            ></a>
           </div>
         </footer>
       </div>
