--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -26,7 +26,7 @@
         <div class="header">
           <div class="header-info">
             <h1 class="header-title">The Greatest show on the earth</h1>
-            <p>Contrary to popular belief, is not simply random text.</p>
+            <p class="header-text" title="Contrary to popular belief, is not simply random text." >Contrary to popular belief, is not simply random text.</p>
             <button type="button" class="header-btn">
               Watch Live <i class="fa-solid fa-angle-right"></i>
             </button>
